# azure-pricing-assistant

./: .dockerignore  .env.example  .gitignore  AZURE_SETUP.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  app.py  azure.yaml  main.py  pyproject.toml  requirements.txt  startup.sh  test_tool_init.py
.github/: copilot-instructions.md
.github/prompts/: next-feature.prompt.md
docs/: PARALLEL_BOM.md  PLAYWRIGHT_MCP_DEPLOYMENT.md
infra/: main.bicep  main.parameters.json  resources.bicep
plans/: README.md  prd.json  progress.txt
specs/: PRD.md  fixes.md
specs/phase1/: ARCHITECTURE.md
specs/phase2/: AGENT_INSTRUCTIONS.md  ARCHITECTURE.md  PROGRESS.md
src/agents/: __init__.py  architect_agent.py  bom_agent.py  pricing_agent.py  proposal_agent.py  question_agent.py
src/cli/: __init__.py  app.py  interface.py  prompts.py
src/core/: config.py  (+3 more)
tests/: README.md  test_architect_agent.py  test_async_bom_workflow.py  test_bom_agent.py  test_bom_endpoint_polling.py  test_bom_integration.py  test_bom_validation.py  test_complex_service_mapping.py  test_incremental_bom.py  test_orchestrator_completion.py  test_parallel_bom.py  test_pricing_agent.py  test_pricing_failure_handling.py  test_pricing_integration.py  test_pricing_urls.py  test_proposal_agent.py  test_proposal_pricing_links.py  test_proposal_storage.py  test_proposals_endpoint.py  test_question_agent.py  test_question_agent_adaptive.py  test_question_agent_streamlined.py  test_retrieve_proposals_workflow.py  test_trace_log_correlation.py  test_ui_error_handling.py  test_web_handlers.py
(+32 files in other folders)
